added a owl carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ a:hover {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
-   margin-top: 50px;
+   margin: 50px auto;
    align-items: center;
 }
 
@@ -295,4 +295,13 @@ a:hover {
 
 /**************************************/
 /*********** End Header  Area*********/
+/************************************/
+
+/**************************************/
+/*********** Start Banner  Area*********/
+/************************************/
+
+
+/**************************************/
+/*********** End Banner  Area*********/
 /************************************/
