--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -687,3 +687,69 @@ a:hover {
 /**************************************/
 /****End  successful student    Area***/
 /************************************/
+
+/**************************************/
+/****Start  student  feedback  Area***/
+/************************************/
+.student-feedback {
+   margin: 130px 0;
+}
+
+.feedback-header {
+   margin-bottom: 50px;
+}
+
+.feedback-header h1 {
+   color: var(--Dark-01, #1D1D1D);
+   text-align: center;
+   font-size: 45px;
+   font-weight: 600;
+   line-height: 60px;
+}
+
+.feedback-header p {
+   color: var(--Dark-03, #777);
+   text-align: center;
+   font-size: 16px;
+   font-weight: 400;
+   line-height: 30px;
+   width: 606px;
+   margin: 20px auto 0 auto;
+}
+
+/**************************************/
+/****End  student  feedback  Area***/
+/************************************/
+
+
+/**************************************/
+/****Start  student  questions  Area***/
+/************************************/
+
+.frequent-question {
+   margin: 130px 0;
+}
+
+.questions-header h1 {
+   color: var(--Dark-01, #1D1D1D);
+   text-align: center;
+   font-size: 45px;
+   font-weight: 600;
+   line-height: 60px;
+}
+
+.questions-header p {
+   color: var(--Dark-03, #777);
+   text-align: center;
+   font-size: 16px;
+   font-weight: 400;
+   line-height: 30px;
+   width: 606px;
+   margin: 20px auto 50px auto;
+}
+
+
+
+/**************************************/
+/****End  student  questions  Area***/
+/************************************/
