--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,3 +783,59 @@ a:hover {
 /**************************************/
 /****End  trusted company  Area***/
 /************************************/
+
+/**************************************/
+/******** Start  footer Area***********/
+/************************************/
+
+.footer {
+   background: #161616;
+   padding: 130px 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.footer h1 {
+   color: #FFF;
+   font-size: 40px;
+   font-weight: 600;
+}
+
+.footer p {
+   color: var(--Dark-06, #E8E8E8);
+   text-align: center;
+   font-size: 16px;
+   font-weight: 400;
+   line-height: 28px;
+   width: 321px;
+   margin: 7px auto 10px auto;
+}
+
+.footer h4 {
+   color: var(--Dark-06, #E8E8E8);
+   font-size: 15px;
+   font-weight: 400;
+   line-height: 126%;
+}
+.footer-icon{
+   display: flex;
+   width: 205px;
+   justify-content: space-between;
+   margin-top: 20px;
+   align-items: center;
+}
+.fa-brands{
+   background: #242424;
+   height: 40px;
+   width: 40px;
+   border-radius: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: white;
+}
+/**************************************/
+/**********End  footer Area***********/
+/************************************/
