--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -103,7 +103,9 @@
         padding: 0 20px !important;
         margin-top: -400px;
     }
-
+    .popular-course{
+        margin: 60px 0;
+    }
     .popular-course-header h1 {
         font-size: 30px;
         width: auto;
@@ -166,6 +168,27 @@
     .elearning-btn button {
         font-size: 18px;
         padding: 11px 18px;
+    }
+    .register {
+        flex-direction: column;
+        align-items: center;
+        padding: 58px;
+        margin: 60px 0;
+        text-align: center;
+    }
+    .register h1 {
+        font-size: 30px;
+        line-height: normal;
+    }
+    .register p {
+        font-size: 16px;
+        line-height: 30px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+    .registration-btn button {
+        padding: 11px 18px;
+        font-size: 18px;
     }
 
 }
@@ -302,6 +325,28 @@
     .elearning-btn button {
         font-size: 18px;
         padding: 11px 18px;
+    }
+    .register {
+        flex-direction: column;
+        align-items: center;
+        padding: 58px;
+        margin: 60px 0;
+        text-align: center;
+    }
+    .register h1 {
+        font-size: 30px;
+        line-height: normal;
+    }
+    .register p {
+        font-size: 16px;
+        line-height: 30px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        width: auto;
+    }
+    .registration-btn button {
+        padding: 11px 18px;
+        font-size: 18px;
     }
 }
 
@@ -474,5 +519,24 @@
     .elearning-btn button {
         font-size: 16px;
         padding: 7px 18px;
+    }
+    .register {
+        padding: 30px 15px;
+        margin: 32px 0;
+        text-align: center;
+    }
+    .register h1 {
+        font-size: 18px;
+    }
+    .register p {
+        font-size: 14px;
+        line-height: 24px;
+        margin-bottom: 16px;
+        margin-top: 10px;
+        width: auto;
+    }
+    .registration-btn button {
+        padding: 7px 18px;
+        font-size: 16px;
     }
 }
